# trade-simulator-cpp

./: CMakeLists.txt  LICENSE  README.md  build.sh
include/: feeModel.hpp  marketImpactModel.hpp  orderbook.hpp  simulator.hpp  slippageModel.hpp  websocketClient.hpp
src/: feeModel.cpp  main.cpp  marketImpactModel.cpp  orderbook.cpp  simulator.cpp  slippageModel.cpp  websocketClient.cpp
